test/ite6.slq

def main(){
	x:=H(0:ğ”¹);
	if x {
		(a,b):=(1:int[3],2:int[3]);
	} else {
		(b,a):=(1:int[3],2:int[3])
	}
	a[0]:=H(H(a[0])); // error
	b[0]:=H(H(b[0])); // error
	1:int[3]:= if x { a } else { b };
	forget(H(x)=0);
}
